2014-03-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* X3D.x3d:
	* GeoCoordinate.wrl:
	* GeoCoordinate.x3d: 

2014-03-21  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.x3d:
	* Comments.wrl: 

2014-03-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.x3d:
	* Comments.wrl: 

2014-03-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* X3D.x3d:
	* UNIT.wrl:
	* Comments.wrl: 

2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Comments.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* GeoLOD.wrl:
	* GeoCoordinate.wrl:
	* GeoTouchSensor.wrl:
	* GeoElevationGrid.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Globals.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl:
	* InlineTimer.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl:
	* Script-vrmlscript1.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* SceneProto.wrl:
	* SceneExternProto.wrl:
	* Proto.rootNodes.wrl:
	* X3DScene.rootNodes.wrl: 

2014-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* QuadSphere.wrl:
	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* EXPORT.wrl:
	* Routes.wrl:
	* Route.wrl:
	* IMPORT-Inline.wrl:
	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* RuntimeNameScopeIMPORT.wrl:
	* RuntimeNameScopeEXPORT.wrl: 

2014-03-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* VRML2.0.wrl:
	* Comments.wrl: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* IMPORT.wrl:
	* Comments.wrl: 
