@@ -126,107 +126,17 @@ DEF Transform Transform {
       # Field Comment
       solid FALSE
       colorPerVertex FALSE
-      texCoordIndex [
-        0,
-        1,
-        3,
-        2,
-        -1,
-        0,
-        1,
-        3,
-        2,
-        -1,
-        0,
-        1,
-        3,
-        2,
-        -1,
-        0,
-        1,
-        3,
-        2,
-        -1,
-        0,
-        1,
-        3,
-        2,
-        -1,
-        0,
-        1,
-        3,
-        2,
-        -1
-      ]
-      colorIndex [
-        0,
-        1,
-        2,
-        3,
-        4,
-        5
-      ]
-      coordIndex [
-        0,
-        1,
-        3,
-        2,
-        -1,
-        4,
-        5,
-        7,
-        6,
-        -1,
-        6,
-        7,
-        1,
-        0,
-        -1,
-        2,
-        3,
-        5,
-        4,
-        -1,
-        6,
-        0,
-        2,
-        4,
-        -1,
-        1,
-        7,
-        5,
-        3,
-        -1
-      ]
+      texCoordIndex [ 0, 1, 3, 2, -1, 0, 1, 3, 2, -1, 0, 1, 3, 2, -1, 0, 1, 3, 2, -1, 0, 1, 3, 2, -1, 0, 1, 3, 2, -1 ]
+      colorIndex [ 0, 1, 2, 3, 4, 5 ]
+      coordIndex [ 0, 1, 3, 2, -1, 4, 5, 7, 6, -1, 6, 7, 1, 0, -1, 2, 3, 5, 4, -1, 6, 0, 2, 4, -1, 1, 7, 5, 3, -1 ]
       color Color {
-        color [
-          1 0 0,
-          0 1 0,
-          0 0 1,
-          1 1 0,
-          0 1 1,
-          1 0 1
-        ]
+        color [ 1 0 0, 0 1 0, 0 0 1, 1 1 0, 0 1 1, 1 0 1 ]
       }
       texCoord TextureCoordinate {
-        point [
-          0 1,
-          0 0,
-          1 1,
-          1 0
-        ]
+        point [ 0 1, 0 0, 1 1, 1 0 ]
       }
       coord Coordinate {
-        point [
-          -1 1 1,
-          -1 -1 1,
-          1 1 1,
-          1 -1 1,
-          1 1 -1,
-          1 -1 -1,
-          -1 1 -1,
-          -1 -1 -1
-        ]
+        point [ -1 1 1, -1 -1 1, 1 1 1, 1 -1 1, 1 1 -1, 1 -1 -1, -1 1 -1, -1 -1 -1 ]
       
         # Inner Comment
       }
